<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_lab_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lab_label"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_responsive"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_lab_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_block_this"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/block_red"
        android:text="@string/block_this"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_block_is" />

    <TextView
        android:id="@+id/tv_block_is"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/block_blue"
        android:text="@string/block_is"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/tv_block_this"
        app:layout_constraintEnd_toStartOf="@id/tv_block_my" />

    <TextView
        android:id="@+id/tv_block_my"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/block_purple"
        android:text="@string/block_my"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/tv_block_is"
        app:layout_constraintEnd_toStartOf="@id/tv_block_first" />

    <TextView
        android:id="@+id/tv_block_first"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/block_yellow"
        android:text="@string/block_first"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/tv_block_my"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_app_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/app_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_block_this"
        app:layout_constraintBottom_toTopOf="@id/btn_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_change"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/btn_change_bg"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_cancel"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/btn_cancel_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_change"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
